# cpp-complicated

./: .gitmodules  README.md
ha1/: CMakeLists.txt  Person.cpp  Person.h  PhoneBook.cpp  PhoneBook.h  PhoneNumber.cpp  PhoneNumber.h  ha1.cpp
ha1/src/: CMakeLists.txt  Person.cpp  PhoneBook.cpp  PhoneBook.h  PhoneNumber.cpp  PhoneNumber.h
ha1/tests/: PersonTest.cpp  PhoneBookTest.cpp  PhoneNumberTest.cpp
ha2/: CMakeLists.txt  count.cpp  count.h  ha2.cpp  templates.h
ha3/: CMakeLists.txt  ha3.cpp  iterator.cpp  iterator.h  matrix.cpp  matrix.h
ha4/: CMakeLists.txt  ha4.cpp  insert.h
ha5/: CMakeLists.txt  ha5.cpp  task1.h  task2.h
ha6/: CMakeLists.txt  ha6.cpp  task1.h  task2.h  task3.cpp  task3.h
ha7/: .gitignore  CMakeLists.txt  FullName.pb.cc  FullName.pb.h  FullName.proto  Student.pb.cc  Student.pb.h  Student.proto  StudentsGroup.cpp  StudentsGroup.h  StudentsGroup.pb.cc  StudentsGroup.pb.h  StudentsGroup.proto  ha7.cpp
