# CMakeList.txt : CMake project for ha5, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ha5")

# Add source to this project's executable.
add_executable (ha5 "ha5.cpp"  "task1.h" "task2.h")

# TODO: Add tests and install targets if needed.
